--- a/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/Views/ModulePrototypeEditorView.axaml
+++ b/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/Views/ModulePrototypeEditorView.axaml
@@ -3,34 +3,14 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="TeamBond.Syntosa.Validation.DataEditor.Views.ModulePrototypeBuilderView">
+             x:Class="TeamBond.Syntosa.Validation.DataEditor.Views.ModulePrototypeEditorView">
   <DockPanel>
-    <TextBox AcceptsReturn="False"
-             DockPanel.Dock="Top"
-             Text="{Binding Name}"
-             Watermark="Name"/>
-    <TextBox AcceptsReturn="False"
-             DockPanel.Dock="Top"
-             Text="{Binding Description}"
-             Watermark="Description"/>
-    <CheckBox DockPanel.Dock="Top"
-              Content="Is the module active?"
-              IsThreeState="False"
-              IsChecked="{Binding IsActive}"/>
-    <CheckBox DockPanel.Dock="Top"
-          Content="Is the module built in?"
-          IsThreeState="False"
-          IsChecked="{Binding IsBuiltIn}"/>
-    <CheckBox DockPanel.Dock="Top"
-              IsThreeState="False"
-              IsChecked="{Binding HasParent}"
-              Content="Does the module have a parent module?"/>
     <TextBlock DockPanel.Dock="Top"
-               IsVisible="{Binding HasParent}">
-      Select the parent module of this module.
+               IsVisible="{Binding !HasSelected}">
+      Select the module to edit.
     </TextBlock>
     <ListBox Items="{Binding AllModuleNames}"
-             IsVisible="{Binding HasParent}"
+             IsVisible="{Binding !HasSelected}"
              SelectionMode="Single"
              DockPanel.Dock="Top"
              ScrollViewer.VerticalScrollBarVisibility="Visible"
@@ -44,10 +24,69 @@
         </DataTemplate>
       </ListBox.ItemTemplate>
     </ListBox>
+    <TextBlock DockPanel.Dock="Top"
+               IsVisible="{Binding HasSelected}"
+               Text="{Binding CurrentName}"/>
+    <TextBox AcceptsReturn="False"
+             DockPanel.Dock="Top"
+             IsVisible="{Binding HasSelected}"
+             Text="{Binding NewModuleName}"
+             Watermark="Name"/>
+    <TextBlock DockPanel.Dock="Top"
+               IsVisible="{Binding HasSelected}"
+               Text="{Binding CurrentDescription}"/>
+    <TextBox AcceptsReturn="False"
+             DockPanel.Dock="Top"
+             IsVisible="{Binding HasSelected}"
+             Text="{Binding NewModuleDescription}"
+             Watermark="Description"/>
+    <CheckBox DockPanel.Dock="Top"
+              Content="Is the module active?"
+              IsVisible="{Binding HasSelected}"
+              IsThreeState="False"
+              IsChecked="{Binding IsActive}"/>
+    <CheckBox DockPanel.Dock="Top"
+          Content="Is the module built in?"
+          IsVisible="{Binding HasSelected}"
+          IsThreeState="False"
+          IsChecked="{Binding IsBuiltIn}"/>
+    <CheckBox DockPanel.Dock="Top"
+              IsVisible="{Binding HasSelected}"
+              IsThreeState="False"
+              IsChecked="{Binding HasParent}"
+              Content="Does the module have a parent module?"/>
+    <TextBlock DockPanel.Dock="Top"
+               IsVisible="{Binding HasParent}">
+      Select the parent module of this module.
+    </TextBlock>
+    <ListBox Items="{Binding AllModuleNames}"
+             IsVisible="{Binding HasParent}"
+             SelectionMode="Single"
+             DockPanel.Dock="Top"
+             ScrollViewer.VerticalScrollBarVisibility="Visible"
+             Height="100"
+             SelectedItem="{Binding SelectedModuleParentName}">
+      <ListBox.ItemTemplate>
+        <DataTemplate>
+          <Border Background="White" CornerRadius="4" Padding="2">
+            <TextBlock Text="{Binding}"/>
+          </Border>
+        </DataTemplate>
+      </ListBox.ItemTemplate>
+    </ListBox>
     <Button DockPanel.Dock="Top"
-            Content="Create Domain"
-            Command="{Binding CreateModule}"
+            Content="Next"
+            Command="{Binding Next}"
+            IsVisible="{Binding !HasSelected}"/>
+    <Button DockPanel.Dock="Top"
+            Content="Update Domain"
+            Command="{Binding UpdateModule}"
+            IsVisible="{Binding HasSelected}"
             Height="30"/>
+    <Button DockPanel.Dock="Top"
+            Content="Back"
+            Command="{Binding Back}"
+            IsVisible="{Binding HasSelected}"/>
     <TextBlock DockPanel.Dock="Top"
        IsVisible="{Binding HasErrors}"
        Text="Please fix these errors"/>
