Added delete functionality to the editor views for super users

--- a/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/Views/TypePrototypeEditorView.axaml
+++ b/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/Views/TypePrototypeEditorView.axaml
@@ -189,6 +189,11 @@
               Height="30"
               Content="Back"
               IsVisible="{Binding HasSelected}"/>
+      <Button Command="{Binding DeleteTypeItem}"
+              Height="30"
+              DockPanel.Dock="Top"
+              Content="Delete Type"
+              IsVisible="{Binding IsDeleteVisible}"/>
       <TextBlock DockPanel.Dock="Top"
                  IsVisible="{Binding HasErrors}"
                  Text="Please fix these errors"/>
