small bug fixes and update to nuget packages

--- a/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/Views/ModulePrototypeBuilderView.axaml
+++ b/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/Views/ModulePrototypeBuilderView.axaml
@@ -45,7 +45,7 @@
       </ListBox.ItemTemplate>
     </ListBox>
     <Button DockPanel.Dock="Top"
-            Content="Create Domain"
+            Content="Create Module"
             Command="{Binding CreateModule}"
             Height="30"/>
     <TextBlock DockPanel.Dock="Top"
