--- a/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/Views/ModulePrototypeEditorView.axaml
+++ b/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/Views/ModulePrototypeEditorView.axaml
@@ -79,7 +79,7 @@
             Command="{Binding Next}"
             IsVisible="{Binding !HasSelected}"/>
     <Button DockPanel.Dock="Top"
-            Content="Update Domain"
+            Content="Update Module"
             Command="{Binding UpdateModule}"
             IsVisible="{Binding HasSelected}"
             Height="30"/>
