--- a/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/Views/MainWindow.axaml
+++ b/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/Views/MainWindow.axaml
@@ -76,6 +76,8 @@
                Content="{Binding TypeFunctionCreatorContent}"/>
       <TabItem Header="Type Creator"
                Content="{Binding TypeCreatorContent}"/>
+      <TabItem Header="Element Creator"
+               Content="{Binding ElementCreatorContent}"/>
       <TabItem Header="Data Editor"
                IsVisible="{Binding IsEditorVisible}"
                Content="{Binding PrototypeEditorContent}"/>
