--- a/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/Views/GlobalPropertyPrototypeBuilderView.axaml
+++ b/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/Views/GlobalPropertyPrototypeBuilderView.axaml
@@ -11,11 +11,6 @@
                Text="{Binding GlobalPropertyName}"/>
       <CheckBox DockPanel.Dock="Top"
                 IsThreeState="False"
-                IsChecked="{Binding HasParent}">
-        Does the element have a parent
-      </CheckBox>
-      <CheckBox DockPanel.Dock="Top"
-                IsThreeState="False"
                 IsChecked="{Binding IsActive}">
         Is the global property active
       </CheckBox>
@@ -24,8 +19,28 @@
                 IsChecked="{Binding IsAutoCollect}">
         Is the global property auto collecting from somewhere
       </CheckBox>
+      <TextBlock DockPanel.Dock="Top"
+                 IsVisible="{Binding IsAutoCollect}">
+          Select auto collecting module
+      </TextBlock>
+      <ListBox
+          DockPanel.Dock="Top"
+          Items="{Binding AllModuleNames}"
+          IsVisible="{Binding IsAutoCollect}"
+          SelectionMode="Single"
+          ScrollViewer.VerticalScrollBarVisibility="Visible"
+          Height="100"
+          SelectedItem="{Binding SelectedModuleAutoCollectName}">
+          <ListBox.ItemTemplate>
+              <DataTemplate>
+                  <Border Background="White" CornerRadius="4" Padding="2">
+                      <TextBlock Text="{Binding}"/>
+                  </Border>
+              </DataTemplate>
+          </ListBox.ItemTemplate>
+      </ListBox>
       <TextBlock DockPanel.Dock="Top">
-        Select domain.
+        Select Element.
       </TextBlock>
       <ListBox Items="{Binding AllElementNames}"
                SelectionMode="Single"
@@ -61,14 +76,14 @@
       <TextBox DockPanel.Dock="Top"
                Watermark="Sort order"
                Text="{Binding SortOrder}"/>
-      <Button Command="{Binding InsertElement}"
+      <Button Command="{Binding InsertGlobalProperty}"
               DockPanel.Dock="Top"
-              Content="Insert the type"
+              Content="Insert the global property"
               Height="30"/>
       <TextBlock DockPanel.Dock="Top"
                  IsVisible="{Binding HasErrors}"
                  Text="Please fix these errors"/>
-      <TextBox DockPanel.Dock="Top"
+      <TextBox DockPanel.Dock="Top" 
                IsVisible="{Binding HasErrors}"
                Text="{Binding Errors}"
                IsReadOnly="True"/>
